ghost-blog/templates/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ghost-blog
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: ClusterIP
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
